整合，抽取数据库模块

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title><%=title%></title>
-</head>
+<% include ./header.ejs %>
 <body>
   <h1><%=title%><%=count%></h1>
   <h2>欢迎第<%=views%>次访问</h2>
